// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dictionary-tool-index should have additional tools when user meets TreeAccessDictionary policy 1`] = `
[
  "find-dictionary",
  "create-dictionary",
  "get-dictionary",
  "delete-dictionary-item",
  "update-dictionary-item",
  "move-dictionary-item",
  "get-dictionary-root",
  "get-dictionary-children",
  "get-dictionary-ancestors",
]
`;

exports[`dictionary-tool-index should have all tools when user meets multiple policies 1`] = `
[
  "find-dictionary",
  "create-dictionary",
  "get-dictionary",
  "delete-dictionary-item",
  "update-dictionary-item",
  "move-dictionary-item",
  "get-dictionary-root",
  "get-dictionary-children",
  "get-dictionary-ancestors",
]
`;

exports[`dictionary-tool-index should have tree tools when user meets TreeAccessDictionaryOrTemplates policy 1`] = `
[
  "find-dictionary",
  "get-dictionary-root",
  "get-dictionary-children",
  "get-dictionary-ancestors",
]
`;

exports[`dictionary-tool-index should only have search tool when user meets no policies 1`] = `
[
  "find-dictionary",
]
`;
